# TensAIR

./: .gitignore  CMakeLists.txt  README.md  configure.sh
Examples/CIFAR/: CIFAR-Model.ipynb  CIFAR-Run.py  CIFAR-evaluation_data.ipynb
Examples/CIFAR/.ipynb_checkpoints/: CIFAR-Run-checkpoint.ipynb
Examples/DEMO/: DEMO-Model.ipynb  DEMO-Run.ipynb  Demonstration.ipynb
Examples/DEMO/.ipynb_checkpoints/: DEMO-Run-checkpoint.ipynb  DEMO-Run-checkpoint.py  Demo_Init-checkpoint.py
Examples/Flight-Delay/: Flight_delay_experiment.ipynb  airline_delay.py
Examples/RESNET50/: RESNET50-Model.ipynb  ResNet50-from_scratch.ipynb  ResNet50-from_scratch_pytorch.ipynb  ResNet50_tensorflow.py  Train_ResNet_TensorFlow.ipynb
Examples/RESNET50/.ipynb_checkpoints/: RESNET50-Model-checkpoint.ipynb  ResNet50_pytorch-checkpoint.py  Train_ResNet_Pytorch-checkpoint.ipynb
Examples/TINY_IMAGE_NET/: TinyImageNet_Dataset.ipynb
Examples/VGG16/: VGG16-Model.ipynb
Examples/W2V/: W2V-Run.ipynb
Examples/W2V/.ipynb_checkpoints/: W2V-Model-checkpoint.ipynb  W2V-Run-checkpoint.py  W2V_data-checkpoint.ipynb
Examples/W2V/~/tensorflow_datasets/wikipedia/.config/: metadata.json
Release/: CMakeCache.txt  Makefile  TensAIR  cmake_install.cmake
data/cifar/cifar_model.tf/: keras_metadata.pb  saved_model.pb
data/cifar/cifar_model.tf/variables/: variables.data-00000-of-00001  variables.index
data/demo/cifar_model_demo.tf/: keras_metadata.pb  saved_model.pb
data/demo/cifar_model_demo.tf/variables/: variables.data-00000-of-00001  variables.index
data/flight/model/: keras_metadata.pb  saved_model.pb
data/flight/model/variables/: variables.data-00000-of-00001  variables.index
data/optwin/: cut_30-25000_0.01_0.5r.csv
data/w2v/: shakespeare_eval.bytes  shakespeare_train.txt
include/: tensair_aux.ipynb  tensair_aux.py
src/TensAIR/: CircularList.cpp  DriftDetector.cpp  DriftDetector.hpp  EventGenerator.cpp  EventGenerator.hpp  Python_Interface.cpp  TensAIR.cpp  TensAIR.hpp
src/airplane/: EventGenerator.cpp  EventGenerator.hpp
src/batching/: Map.cpp  Map.hpp  Reduce.cpp  Reduce.hpp
src/cifar/: EventGenerator.cpp  EventGenerator.hpp
src/collector/: BinCollector.cpp  BinCollector.hpp  RowCollector.cpp  RowCollector.hpp
src/communication/: Message.cpp  Message.hpp  Window.hpp  Window.hpp.orig
src/connector/: BinConnector.cpp  BinConnector.hpp  PartRowConnector.cpp  PartRowConnector.hpp  RowConnector.cpp  RowConnector.hpp
src/dataflow/: BasicDataflow.hpp  BasicVertex.hpp  CountAggregator.hpp  Dataflow.cpp  Dataflow.hpp  FlowWrappingAggregator.hpp  SortAggregator.hpp  Vertex.cpp  Vertex.hpp
src/demo/: EventGenerator.cpp  EventGenerator.hpp
src/function/: SquareFunction.cpp
src/hessian_w2v/: EventGenerator.cpp  EventGenerator.hpp  Model.cpp  Model.hpp
src/input/: FileInput.cpp  FileInput.hpp  Input.cpp  Input.hpp
src/main/: main.cpp
src/partitioning/: Hash.cpp  Partition.hpp
src/relational/: Aggr.cpp  Aggr.hpp  Attribute.cpp  Attribute.hpp  Cond.cpp  Cond.hpp  Relation.cpp  Relation.hpp  Schema.cpp  Schema.hpp  SortAggregation.cpp  SortAggregation.hpp  SortMergeJoin.cpp  SortMergeJoin.hpp
src/resnet50_Convergence/: RESNET50_Convergence.cpp  RESNET50_Convergence.hpp
src/serialization/: Serialization.cpp  Serialization.hpp
src/usecases/: Cifar.cpp  Cifar.hpp  Demo.cpp  Demo.hpp  Hessian_W2V.cpp  Hessian_W2V.hpp  MapReduce.cpp  MapReduce.hpp  RESNET50.cpp  RESNET50.hpp  StreamingTest.cpp  StreamingTest.hpp  VGG16.cpp  VGG16.hpp  WordEmbedding.cpp  WordEmbedding.hpp
src/vgg16_Convergence/: VGG16_Convergence.cpp  VGG16_Convergence.hpp
src/word_embedding/: EventGenerator.cpp  EventGenerator.hpp
